# locallm

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py
src/locallm/: __init__.py  config.py  embedding.py  model.py
tests/: test_model.py  test_ollama.py
